src/ui/snapshots/lazydatabricks__ui__tests__runs_error_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Runs - Detail ⠋───────────────────────────────┐"
"│◐ dev → adb-1.azuredatabr││HTTP 429 for                                       │"
"│3 of 3 jobs · 0s ago     ││/api/2.2/jobs/runs/list?job_id=1&limit=25:         │"
"└─────────────────────────┘│REQUEST_LIMIT_EXCEEDED: Too many requests          │"
"┌─[2]─Jobs by activity────┐│                                                   │"
"│    · [someone] okonomi_…││                                                   │"
"│    · nightly_bronze_ing…││                                                   │"
"│    · weekly_report      ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────1 of 3┘│                                                   │"
"┌─[3]─Pipelines ⠋ by activ┐│                                                   │"
"│                         │└───────────────────────────────────────────────────┘"
"│                         │┌─API log───────────────────────────────────────────┐"
"│                         ││GET  /api/2.2/jobs/list?limit=25        200    84ms│"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘└───────────────────────────────────────────────────┘"
" Move: j/k │ Filter: / │ Mine: m │ Status: f │ Actions: x │ Quit: q │ Keys: ?   "
