src/ui/snapshots/lazydatabricks__ui__tests__runs_loading_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Runs - Detail ⠙───────────────────────────────┐"
"│◐ dev → adb-1.azuredatabr││                                                   │"
"│3 of 3 jobs · 0s ago     ││                                                   │"
"└─────────────────────────┘│                                                   │"
"┌─[2]─Jobs by activity────┐│                                                   │"
"│    · [someone] okonomi_…││                                                   │"
"│    · nightly_bronze_ing…││                                                   │"
"│    · weekly_report      ││                                                   │"
"│                         ││                                                   │"
"└───────────────────2 of 3┘│                                                   │"
"┌─[3]─Pipelines ⠙ by activ┐│                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         │└───────────────────────────────────────────────────┘"
"└───────────────────0 of 0┘┌─API log───────────────────────────────────────────┐"
"┌─[4]─Clusters ⠙──────────┐│GET  /api/2.2/jobs/list?limit=25        200    84ms│"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘└───────────────────────────────────────────────────┘"
" Move: j/k │ Filter: / │ Mine: m │ Status: f │ Actions: x │ Quit: q │ Keys: ?   "
