src/ui/snapshots/lazydatabricks__ui__tests__runs_tab_80x24.snap
---
source: src/ui/mod.rs
expression: render(&with_runs())
---
"┌─[1]─Status──────────────┐┌─[0]─Runs - Detail - JSON - Output ⠋───────────────┐"
"│◐ dev → adb-1.azuredatabr││  Run ID           Started      Duration  Result   │"
"│3 of 3 jobs · 0s ago     ││› 50851892761075   01.09 10:08  2h00m     ◐ RUNNING│"
"│◐ 1 · ✗ 1 · ● 0          ││  50851892761073   31.08 10:08  1m12s     ✓ SUCCESS│"
"└─────────────────────────┘│  50851892761074   30.08 10:08  57s       ✗ FAILED │"
"┌─[2]─Jobs by activity────┐│                                                   │"
"│ 2h ◐ [someone] okonomi_…││                                                   │"
"│ 1d ✗ nightly_bronze_ing…││                                                   │"
"│    · weekly_report      ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────1 of 3┘│                                                   │"
"┌─[3]─Pipelines ⠋ by activ┐│                                                   │"
"│                         │└───────────────────────────────────────────────────┘"
"│                         │┌─API log───────────────────────────────────────────┐"
"│                         ││GET  /api/2.2/jobs/list?limit=25        200    84ms│"
"└───────────────────0 of 0┘│GET  /api/2.2/jobs/runs/list?job_id=1&… 200   131ms│"
"┌─[4]─Compute ⠋───────────┐│                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘└───────────────────────────────────────────────────┘"
" Move: j/k │ Filter: / │ Mine: m │ Status: f │ Actions: x │ Quit: q │ Keys: ?   "
