src/ui/snapshots/lazydatabricks__ui__tests__search_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Runs - Detail - JSON - Output /cron ⠋─────────┐"
"│◐ dev → adb-1.azuredatabr││    "quartz_cron_expression": "0 0 2 * * ?",       │"
"│3 of 3 jobs · 0s ago     ││    "timezone_id": "Europe/Oslo"                   │"
"│◐ 1 · ✗ 1 · ● 0          ││  },                                               │"
"└─────────────────────────┘│  "tags": {                                        │"
"┌─[2]─Jobs by activity────┐│    "dev": "someone",                              │"
"│ 2h ◐ [someone] okonomi_…││    "domain": "okonomi"                            │"
"│ 1d ✗ nightly_bronze_ing…││  },                                               │"
"│    · weekly_report      ││  "tasks": [                                       │"
"│                         ││    {                                              │"
"│                         ││      "job_cluster_key": "small",                  │"
"│                         ││      "spark_python_task": {                       │"
"│                         ││        "python_file": "src/v1compat.py"           │"
"└───────────────────1 of 3┘│      },                                           │"
"┌─[3]─Pipelines ⠋ by activ┐│      "task_key": "v1compat"                       │"
"│                         │└───────────────────────────────────────────────────┘"
"│                         │┌─API log───────────────────────────────────────────┐"
"│                         ││GET  /api/2.2/jobs/list?limit=25        200    84ms│"
"└───────────────────0 of 0┘│GET  /api/2.2/jobs/runs/list?job_id=1&… 200   131ms│"
"┌─[4]─Compute ⠋───────────┐│                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘└───────────────────────────────────────────────────┘"
" Move: j/k │ Open: Enter │ Back: Esc │ Actions: x │ Quit: q │ Keys: ?     v0.0.0"
