src/ui/snapshots/lazydatabricks__ui__tests__task_pages_menu_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Runs - Detail - JSON - Output › run 5085189276┐"
"│◐ dev → adb-1.azuredatabr││Run ID         50851892761073                      │"
"│3 of 3 jobs · 0s ago     ││Started        31.08 10:08                         │"
"│◐ 1 · ✗ 1 · ● 0          ││Duration       1m12s                               │"
"└─────────────────────────┘│Result         ✓ SUCCESS                           │"
"┌─[2]─Jobs by activity────┐│Message        -                                   │"
"│ 2h ◐ [someone] okonomi_…││URL            https://adb-1.azuredatabricks.net/?o│"
"│ 1d ✗ nightly_bronze_ing…││                                                   │"
"│    · weekly_re┌ Actions ─────────────────────────────────────┐n  Result      │"
"│               │Run now: [someone] okonomi_gold               │   ✓ SUCCESS   │"
"│               │Run with parameters: [someone] okonomi_gold   │   ✓ SUCCESS   │"
"│               │Open task v1compat in browser                 │               │"
"│               │Open task endring_sluttdato_fakta in browser  │               │"
"└───────────────│Pause schedule: [someone] okonomi_gold        │               │"
"┌─[3]─Pipelines │Resume schedule: [someone] okonomi_gold       │               │"
"│               │Delete job: [someone] okonomi_gold            │───────────────┘"
"│               └─────read-only: --allow-actions to enable─────┘───────────────┐"
"│                         ││GET  /api/2.2/jobs/list?limit=25        200    84ms│"
"└───────────────────0 of 0┘│GET  /api/2.2/jobs/runs/list?job_id=1&… 200   131ms│"
"┌─[4]─Compute ⠋───────────┐│                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘└───────────────────────────────────────────────────┘"
" Choose: j/k │ Confirm: Enter │ Close: Esc                                v0.0.0"
